finished console version

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <script src="script.js"></script>
+        <h1 style="text-align: center;">THE GAME IS PLAYED IN THE CONSOLE</h1>
     </body>
 </html>
