--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1 style="text-align: center;">Rock, Paper, Scissors Game</h1>
+        <h2 style="text-align: center;">Choose One Of The Following</h2>
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div class="roundOutcome"></div>
         <script src="script.js"></script>
-        <h1 style="text-align: center;">THE GAME IS PLAYED IN THE CONSOLE</h1>
     </body>
 </html>
